--- a/gopal home.html
+++ b/gopal home.html
@@ -14,7 +14,7 @@
        <hr>
        <a href="gopal home.html">home&nbsp;</a>
        <a href="about.html">about&nbsp;</a>
-       <a href="gopal 3.html">project&nbsp;</a>
+       <a href="project.html">project&nbsp;</a>
        <a href="skill.html">skill&nbsp;</a>
        <a href="contact.html">contact&nbsp;</a>
        <hr>
