--- a/project.html
+++ b/project.html
@@ -18,14 +18,22 @@
        <hr>
        <h2>project</h2>
        <p> in my carear i have complete many project.<br>
-       1.amozone <br>
-       2.dark web <br>
-       3.flipcart<br>
-       4.angel one <br>
-       5.upstox <br>
-       6.free fire<br>
+       
        </p>
-
-
+<div>
+<a href="youtube (1).html">you tube</a>
+</div>
+<div>
+<a href="whatsapp (1).html">watsaap</a>
+</div>
+<div>
+<a href="login.html">instagram</a>
+</div>
+<div>
+<a href="sir.html">arc</a>
+</div>
+<div>
+<a href="resume.html">resume</a>
+</div>
        </body>
 </html>
